--- a/kanban-app/src/style.css
+++ b/kanban-app/src/style.css
@@ -5,12 +5,45 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    --background-color: #f7f7f7;
+    --card-background-color: #fff;
+    --button-color: #3498db;
+    --text-color: #333;
+    --text-strong: #555;
+    --highlight-green: #e9ffe6;
+    --highlight-red: #ffe6e6;
+    --highlight-yellow: #ffffe6;
+    --border-color: #ddd;
+
+}
+
+.dark {
+    --background-color: #2c2c2c;
+    --text-color: #eee;
+    --card-background-color: #3a3a3a;
+    --button-color: #3b82f6;
+    --text-strong: #fff;
+    --highlight-green: #294f39;
+    --highlight-red: #58322e;
+    --highlight-yellow: #796d39;
+    --border-color: #222222;
+
+    p {
+        color: var(--text-color);
+    }
+}
+
+#app {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    padding: 10px;
+    overflow-x: hidden;
 }
 
 a {
@@ -24,6 +57,7 @@ a:hover {
 }
 
 body {
+    background-color: var(--background-color);
     margin: 0;
     display: flex;
     place-items: center;
