--- a/kanban-app/src/style.css
+++ b/kanban-app/src/style.css
@@ -45,12 +45,15 @@
 
 }
 
-
 #app {
-    background-color: var(--background-color);
     color: var(--text-color);
     padding: 10px;
-    overflow-x: hidden;
+}
+
+@media only screen and (min-width: 1368px) {
+    #app, .kanban-cards {
+        overflow-x: hidden;
+    }
 }
 
 ::selection {
@@ -73,7 +76,7 @@ body {
     margin: 0;
     display: flex;
     place-items: center;
-    min-width: 320px;
+    min-width: min-content;
     min-height: 100vh;
 }
 
